--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -14,7 +14,7 @@
 #
 # Examples:
 #   devel: node-role.kubernetes.io/development=true, beta.kubernetes.io/instance-type=t3.large
-podNodesSelectorConfig: 
+podNodesSelectorConfig: russet:env=russet;amber:env=amber
 
 service:
   # the service is important. It forms part of the CN for SSL certificate. 
