use replicas and add ignoreNamespaces

--- a/helm/templates/mutating-webhook-configuration.yaml
+++ b/helm/templates/mutating-webhook-configuration.yaml
@@ -24,3 +24,8 @@ webhooks:
     - "*"
     resources:
     - pods
+  namespaceSelector:
+    matchExpressions:
+      - key: kubernetes.io/metadata.name
+        operator: NotIn
+        values: '{{.Values.ignoreNamespaces}}'
