mutating webhook ignoreNamesapces should be an array

--- a/helm/templates/mutating-webhook-configuration.yaml
+++ b/helm/templates/mutating-webhook-configuration.yaml
@@ -28,4 +28,4 @@ webhooks:
     matchExpressions:
       - key: kubernetes.io/metadata.name
         operator: NotIn
-        values: '{{.Values.ignoreNamespaces}}'
+        values: {{.Values.ignoreNamespaces}}
